# hgui-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  com.kaii.hgui.json  com.kaii.hgui.json~  io.github.kaii_lb.hgui.json  meson.build
.github/workflows/: main.yml
data/: com.kaii.hgui.appdata.xml.in  com.kaii.hgui.desktop.in  com.kaii.hgui.gschema.xml  io.github.kaii_lb.hgui.appdata.xml.in  io.github.kaii_lb.hgui.desktop.in  io.github.kaii_lb.hgui.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.rs  config.rs  hgui-rust.gresource.xml  main.rs  meson.build  window.rs
src/gtk/: window.blp
