[package]
name = "hgui-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.5", package = "gtk4" }
env = "0.0.0"
arboard = { version = "3.2.0", features = ["wayland-data-control"] }

[dependencies.adw]
package = "libadwaita"
version = "0.2"
features = ["v1_2"]
