[package]
name = "hgui-rust"
version = "1.0.2"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
gtk = { version = "0.10.2", package = "gtk4" }
env = "1.0.1"
arboard = { version = "3.2.0", features = ["wayland-data-control"] }
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_4"] }
